# Deriva

./: .dockerignore  .gitignore  Cargo.toml  DOCKER.md  Dockerfile  PHASE1_BASELINE.md  PHASE2_1_COMPLETE.md  PHASE2_2_COMPLETE.md  PUBLICATION_ROADMAP.md  README.md  benchmark_results.txt  docker-compose.monitoring.yml  docker-compose.yml  index.html  run_filter_props_test.sh  t -p deriva-core --test persistent_dag_props -- --test-threads=1
crates/deriva-benchmarks/: Cargo.toml
crates/deriva-benchmarks/benches/: batch_bench.rs  batch_vs_streaming.rs  buffered_function_memory.rs  cascade_invalidation.rs  complexity_scaling.rs  compression_codec_comparison.rs  crypto_overhead.rs  flow_control_overhead.rs  fusible_chain_scaling.rs  garbage_collection.rs  hash_algorithm_comparison.rs  memory_profile.rs  parallel_materialization.rs  storage_primitives.rs  streaming_pipeline.rs  text_processing_overhead.rs  verification_overhead.rs
crates/deriva-cli/: Cargo.toml  build.rs
crates/deriva-cli/src/: args.rs  client.rs  main.rs
crates/deriva-cli/tests/: cli_integration.rs  client_helpers.rs
crates/deriva-compute/: Cargo.toml
crates/deriva-compute/benches/: format_benchmarks.rs
crates/deriva-compute/src/: adaptive.rs  async_executor.rs  builtins.rs  builtins_format.rs  builtins_format_archive.rs  builtins_format_audio.rs  builtins_format_binary.rs  builtins_format_bio.rs  builtins_format_cas.rs  builtins_format_columnar.rs  builtins_format_common.rs  builtins_format_config.rs  builtins_format_csv.rs  builtins_format_database.rs  builtins_format_detect.rs  builtins_format_document.rs  builtins_format_erasure.rs  builtins_format_geo.rs  builtins_format_image.rs  builtins_format_log.rs  builtins_format_ml.rs  builtins_format_network.rs  builtins_format_scientific.rs  builtins_format_serialization.rs  builtins_streaming.rs  cache.rs  chunk_cache.rs  executor.rs  function.rs  fusion.rs  gc.rs  invalidation.rs  leaf_store.rs  lib.rs  memory_budget.rs  metrics.rs  pipeline.rs  registry.rs  streaming.rs  streaming_executor.rs
crates/deriva-compute/src/builtins/: accumulators.rs  analytics.rs  batch_only.rs  cas.rs  combiners.rs  compression.rs  crypto.rs  format_conversion.rs  mod.rs  slicing.rs  text.rs  transforms.rs  validation.rs
crates/deriva-compute/src/builtins_streaming/: analytics.rs  cas.rs  compression.rs  core.rs  crypto.rs  encoding.rs  flow.rs  mod.rs  numeric.rs  registration.rs  text.rs  validation.rs
crates/deriva-compute/tests/: adaptive_integration.rs  adaptive_transparency_proptest.rs  async_executor.rs  async_executor_props.proptest-regressions  async_executor_props.rs  batch_transforms.rs  cascade_invalidator.rs  compute.rs  cross_category_conversion.rs  feature_flag_isolation.rs  format_archive_tests.rs  format_audio_tests.rs  format_binary_tests.rs  format_bio_tests.rs  format_cas_tests.rs  format_columnar_filter_props.rs  format_columnar_projection_props.rs  format_columnar_tests.rs  format_config_tests.rs  format_cross_phase_integration.rs  format_database_tests.rs  format_detect_props.rs  format_detect_tests.rs  format_detection_integration.rs  format_document_tests.rs  format_erasure_props.rs  format_erasure_tests.rs  format_error_handling.rs  format_geo_tests.rs  format_id_uniqueness.rs  format_image_tests.rs  format_log_tests.rs  format_ml_tests.rs  format_mode_compat.rs  format_network_tests.rs  format_scientific_tests.rs  format_serialization_props.rs  format_serialization_tests.rs  format_trait_compliance.rs  gc_live_set.rs  (+9 more)
crates/deriva-compute/tests/async_exec/: caching.rs  core.rs  dedup.rs  error_handling.rs  parallel.rs  semaphore.rs  stress.rs
crates/deriva-compute/tests/batch/: accumulators.rs  batch_only.rs  cas_specific.rs  combiners.rs  compression.rs  crypto.rs  edge_cases.rs  format_conversion.rs  pipeline_composition.rs  registry_count.rs  roundtrips.rs  slicing.rs  streaming_parity.rs  text.rs  transforms.rs  validation.rs
crates/deriva-compute/tests/format_archive/: compression_ops.rs  mod.rs  sevenz_rar_ops.rs  tar_ops.rs  zip_ops.rs
crates/deriva-compute/tests/format_audio/: audio_ops.rs  helpers.rs  mod.rs  video_detect_ops.rs  wav_pcm_ops.rs
crates/deriva-compute/tests/format_binary/: mod.rs  stl_wasm_elf_ops.rs  stub_ops.rs
crates/deriva-compute/tests/format_bio/: fasta_fastq_ops.rs  helpers.rs  mod.rs  sam_vcf_bed_gff_ops.rs  stub_ops.rs
crates/deriva-compute/tests/format_cas/: car_ops.rs  cid_ops.rs  dag_ops.rs  mod.rs
crates/deriva-compute/tests/format_columnar/: advanced_ops.rs  arrow_ops.rs  mod.rs  orc_ops.rs  parquet_ops.rs
crates/deriva-compute/tests/format_config/: convert_ops.rs  hcl_props_plist_ops.rs  ini_env_ops.rs  mod.rs  roundtrip_props.rs  toml_ops.rs  yaml_ops.rs
crates/deriva-compute/tests/format_csv/: csv_ops.rs  json_ops.rs  mod.rs  ndjson_ops.rs  roundtrip_props.rs  (+1 more)
crates/deriva-core/: Cargo.toml
crates/deriva-core/src/: address.rs  cache.rs  dag.rs  error.rs  gc.rs  invalidation.rs  lib.rs  persistent_dag.rs  recipe_store.rs  streaming.rs
crates/deriva-core/tests/: address.rs  address_proptest.rs  cache.rs  cascade_cache.rs  cascade_dag.rs  cascade_proptest.rs  dag.rs  persistent_dag.rs  persistent_dag_cache.rs  persistent_dag_props.rs  scaffolding.rs
crates/deriva-network/: Cargo.toml  build.rs
crates/deriva-network/src/: anti_entropy.rs  bloom.rs  config.rs  internal_service.rs  lib.rs  memberlist.rs  message.rs  metrics.rs  replication.rs  runtime.rs  types.rs
crates/deriva-network/tests/: bloom_test.rs  checkpoint_smoke.rs  integration.rs  memberlist_test.rs  message_test.rs  property_tests.rs  types_test.rs
crates/deriva-server/: Cargo.toml
crates/deriva-server/src/: gc.rs  lib.rs  main.rs  metrics.rs  metrics_server.rs  service.rs  state.rs
crates/deriva-server/tests/: gc.rs  gc_integration.rs  gc_proptest.rs  grpc_service.rs  integration.rs  observability.rs
crates/deriva-storage/: Cargo.toml
crates/deriva-storage/src/: blob_store.rs  lib.rs  recipe_store.rs
crates/deriva-storage/tests/: backend.rs  blob_store.rs  migration_repair.rs  recipe_store.rs
(+254 files in other folders)
