[workspace]
resolver = "2"
members = [
    "crates/deriva-core",
    "crates/deriva-compute",
    "crates/deriva-storage",
    "crates/deriva-network",
    "crates/deriva-server",
    "crates/deriva-cli",
    "crates/deriva-benchmarks",
]

[workspace.dependencies]
# Hashing
blake3 = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
bincode = "1"
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Storage
sled = "0.34"

# gRPC
tonic = "0.12"
prost = "0.13"
tonic-build = "0.12"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
prometheus = "0.13"
lazy_static = "1"

# Misc
uuid = { version = "1", features = ["v4"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Bytes
bytes = "1"

# Testing
proptest = "1"
