[package]
name = "deriva-benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
deriva-core = { path = "../deriva-core" }
deriva-compute = { path = "../deriva-compute" }
deriva-storage = { path = "../deriva-storage" }
deriva-server = { path = "../deriva-server" }
bytes.workspace = true
serde_json = "1"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
tokio = { workspace = true, features = ["rt-multi-thread"] }
async-trait.workspace = true
sled = { workspace = true }

[[bench]]
name = "garbage_collection"
harness = false

[[bench]]
name = "storage_primitives"
harness = false

[[bench]]
name = "parallel_materialization"
harness = false

[[bench]]
name = "verification_overhead"
harness = false

[[bench]]
name = "cascade_invalidation"
harness = false

[[bench]]
name = "streaming_pipeline"
harness = false

[[bench]]
name = "batch_bench"
harness = false

[[bench]]
name = "batch_vs_streaming"
harness = false

[[bench]]
name = "memory_profile"
harness = false

[[bench]]
name = "crypto_overhead"
harness = false

[[bench]]
name = "text_processing_overhead"
harness = false

[[bench]]
name = "flow_control_overhead"
harness = false

[[bench]]
name = "hash_algorithm_comparison"
harness = false

[[bench]]
name = "compression_codec_comparison"
harness = false

[[bench]]
name = "complexity_scaling"
harness = false
