[package]
name = "deriva-compute"
version = "0.1.0"
edition = "2021"

[features]
default = ["extended-streaming"]
extended-streaming = []
extended-batch = ["extended-streaming"]

# Phase bundles
format-phase1 = ["format-detect", "format-csv", "format-config", "format-archive", "format-log", "format-cas"]
format-phase2 = ["format-erasure", "format-serialization", "format-columnar"]
format-phase3 = ["format-image", "format-document", "format-audio", "format-geo"]
format-phase4 = ["format-scientific", "format-database", "format-ml", "format-network", "format-bio", "format-binary"]
format-all = ["format-phase1", "format-phase2", "format-phase3", "format-phase4"]

# Category flags
format-detect = []
format-csv = []
format-config = []
format-archive = []
format-log = []
format-cas = []
format-erasure = []
format-serialization = []
format-columnar = []
format-image = []
format-document = []
format-audio = []
format-geo = []
format-scientific = []
format-database = []
format-ml = []
format-network = []
format-bio = []
format-binary = []

[dependencies]
parquet = { version = "57", features = ["arrow"] }
arrow = { version = "57", features = ["ipc", "json"] }
orc-rust = "0.7"
image = { version = "0.25", features = ["png", "jpeg", "gif", "webp", "tiff", "bmp"] }
hex = "0.4"
resvg = "0.47"
lopdf = "0.39"
calamine = "0.33"
scraper = "0.25"
comrak = "0.50"
symphonia = { version = "0.5", features = ["mp3", "flac", "wav", "ogg", "aac", "isomp4", "mkv"] }
geojson = "0.24"
geo = "0.29"
wkt = "0.14"
shapefile = "0.7"
flatgeobuf = "6.0"
geozero = { version = "0.15", features = ["with-geojson"] }
ndarray = "0.16"
deriva-core = { path = "../deriva-core" }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
num_cpus = "1"
blake3 = "1"
data-encoding = "2"
zstd = "0.13"
lz4_flex = "0.11"
snap = "1"
brotli = "7"
md-5 = "0.10"
hmac = "0.12"
aes = "0.8"
ctr = "0.9"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
argon2 = "0.5"
regex = "1"
rand = "0.8"
encoding_rs = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
serde_json = "1"
bincode = { workspace = true }
serde = { version = "1", features = ["derive"] }
jsonschema = "0.28"
csv = "1"
serde_yaml = "0.9"
configparser = "3"
hcl-rs = "0.19"
toml = "0.8"
quick-xml = { version = "0.36", features = ["serialize"] }
jsonpath-rust = "0.7"
sha2 = { workspace = true }
base64 = { workspace = true }
flate2 = { workspace = true }
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
bzip2 = "0.5"
xz2 = "0.1"
sevenz-rust = "0.6"
crc32fast = { workspace = true }
libipld = "0.16"
reed-solomon-erasure = "6"
apache-avro = "0.21"
rmp-serde = "1"
ciborium = "0.2"
bson = { version = "3", features = ["serde_json-1", "serde"] }
prost = "0.14"
prost-reflect = { version = "0.16", features = ["serde"] }
prost-types = "0.14"
prometheus = { workspace = true }
lazy_static = { workspace = true }

[dev-dependencies]
sled = { workspace = true }
criterion = "0.5"
proptest = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }

[[test]]
name = "format_archive_tests"
required-features = ["format-archive"]

[[test]]
name = "format_audio_tests"
required-features = ["format-audio"]

[[test]]
name = "format_binary_tests"
required-features = ["format-binary"]

[[test]]
name = "format_bio_tests"
required-features = ["format-bio"]

[[test]]
name = "format_cas_tests"
required-features = ["format-cas"]

[[test]]
name = "format_columnar_tests"
required-features = ["format-columnar"]

[[test]]
name = "format_config_tests"
required-features = ["format-config"]

[[test]]
name = "format_csv_tests"
required-features = ["format-csv"]

[[test]]
name = "format_database_tests"
required-features = ["format-database"]

[[test]]
name = "format_detect_tests"
required-features = ["format-detect"]

[[test]]
name = "format_document_tests"
required-features = ["format-document"]

[[test]]
name = "format_erasure_tests"
required-features = ["format-erasure"]

[[test]]
name = "format_geo_tests"
required-features = ["format-geo"]

[[test]]
name = "format_image_tests"
required-features = ["format-image"]

[[test]]
name = "format_log_tests"
required-features = ["format-log"]

[[test]]
name = "format_ml_tests"
required-features = ["format-ml"]

[[test]]
name = "format_network_tests"
required-features = ["format-network"]

[[test]]
name = "format_scientific_tests"
required-features = ["format-scientific"]

[[test]]
name = "format_serialization_tests"
required-features = ["format-serialization"]

[[test]]
name = "format_detection_integration"
required-features = ["format-detect"]

[[test]]
name = "cross_category_conversion"
required-features = ["format-csv", "format-serialization", "format-detect"]

[[test]]
name = "streaming_equivalence"
required-features = ["format-phase1", "format-phase2", "format-document", "format-geo"]

[[bench]]
name = "format_benchmarks"
harness = false
required-features = ["format-all"]
