[package]
name = "deriva-compute"
version = "0.1.0"
edition = "2021"

[features]
default = ["extended-streaming", "format-phase1"]
extended-streaming = []
extended-batch = ["extended-streaming"]

# Phase bundles
format-phase1 = ["format-detect", "format-csv", "format-config", "format-archive", "format-log", "format-cas"]
format-phase2 = ["format-erasure", "format-serialization", "format-columnar"]
format-phase3 = ["format-image", "format-document", "format-audio", "format-geo"]
format-phase4 = ["format-scientific", "format-database", "format-ml", "format-network", "format-bio", "format-binary"]
format-all = ["format-phase1", "format-phase2", "format-phase3", "format-phase4"]

# Alias: format-media maps to format-audio (spec uses "media", code uses "audio")
format-media = ["format-audio"]

# Category flags with conditional dependency activation
format-detect = ["dep:quick-xml"]
format-csv = ["dep:quick-xml", "dep:jsonpath-rust"]
format-config = ["dep:configparser", "dep:hcl-rs"]
format-archive = ["dep:tar", "dep:zip", "dep:bzip2", "dep:xz2", "dep:sevenz-rust"]
format-log = []
format-cas = ["dep:libipld"]
format-erasure = ["dep:reed-solomon-erasure"]
format-serialization = ["dep:apache-avro", "dep:prost", "dep:prost-reflect", "dep:prost-types", "dep:rmp-serde", "dep:ciborium", "dep:bson"]
format-columnar = ["dep:parquet", "dep:arrow", "dep:orc-rust"]
format-image = ["dep:image", "dep:resvg"]
format-document = ["dep:lopdf", "dep:calamine", "dep:scraper", "dep:comrak"]
format-audio = ["dep:symphonia", "dep:image"]
format-geo = ["dep:geojson", "dep:geo", "dep:wkt", "dep:shapefile", "dep:flatgeobuf", "dep:geozero"]
format-scientific = ["dep:ndarray"]
format-database = []
format-ml = []
format-network = []
format-bio = []
format-binary = []

[dependencies]
# === Core dependencies (always available) ===
deriva-core = { path = "../deriva-core" }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
num_cpus = "1"
blake3 = "1"
data-encoding = "2"
zstd = "0.13"
lz4_flex = "0.11"
snap = "1"
brotli = "7"
md-5 = "0.10"
hmac = "0.12"
aes = "0.8"
ctr = "0.9"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
argon2 = "0.5"
regex = "1"
rand = "0.8"
encoding_rs = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
serde_json = "1"
bincode = { workspace = true }
serde = { version = "1", features = ["derive"] }
jsonschema = "0.28"
sha2 = { workspace = true }
base64 = { workspace = true }
bs58 = "0.5"
percent-encoding = "2"
flate2 = { workspace = true }
crc32fast = { workspace = true }
hex = "0.4"
prometheus = { workspace = true }
lazy_static = { workspace = true }

# Core format deps (used by builtins/format_conversion.rs — not optional)
csv = "1"
serde_yaml = "0.9"
toml = "0.8"

# === Optional dependencies (gated behind feature flags) ===

# format-detect, format-csv
quick-xml = { version = "0.36", features = ["serialize"], optional = true }

# format-csv
jsonpath-rust = { version = "0.7", optional = true }

# format-config
configparser = { version = "3", optional = true }
hcl-rs = { version = "0.19", optional = true }

# format-archive
tar = { version = "0.4", optional = true }
zip = { version = "2", default-features = false, features = ["deflate"], optional = true }
bzip2 = { version = "0.5", optional = true }
xz2 = { version = "0.1", optional = true }
sevenz-rust = { version = "0.6", optional = true }

# format-cas
libipld = { version = "0.16", optional = true }

# format-erasure
reed-solomon-erasure = { version = "6", optional = true }

# format-serialization
apache-avro = { version = "0.21", optional = true }
rmp-serde = { version = "1", optional = true }
ciborium = { version = "0.2", optional = true }
bson = { version = "3", features = ["serde_json-1", "serde"], optional = true }
prost = { version = "0.14", optional = true }
prost-reflect = { version = "0.16", features = ["serde"], optional = true }
prost-types = { version = "0.14", optional = true }

# format-columnar
parquet = { version = "57", features = ["arrow"], optional = true }
arrow = { version = "57", features = ["ipc", "json"], optional = true }
orc-rust = { version = "0.7", optional = true }

# format-image
image = { version = "0.25", features = ["png", "jpeg", "gif", "webp", "tiff", "bmp"], optional = true }
resvg = { version = "0.47", optional = true }

# format-document
lopdf = { version = "0.39", optional = true }
calamine = { version = "0.33", optional = true }
scraper = { version = "0.25", optional = true }
comrak = { version = "0.50", optional = true }

# format-audio
symphonia = { version = "0.5", features = ["mp3", "flac", "wav", "ogg", "aac", "isomp4", "mkv"], optional = true }

# format-geo
geojson = { version = "0.24", optional = true }
geo = { version = "0.29", optional = true }
wkt = { version = "0.14", optional = true }
shapefile = { version = "0.7", optional = true }
flatgeobuf = { version = "6.0", optional = true }
geozero = { version = "0.15", features = ["with-geojson"], optional = true }

# format-scientific
ndarray = { version = "0.16", optional = true }

[dev-dependencies]
sled = { workspace = true }
criterion = "0.5"
proptest = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }

[[test]]
name = "feature_flag_isolation"

[[test]]
name = "format_archive_tests"
required-features = ["format-archive"]

[[test]]
name = "format_audio_tests"
required-features = ["format-audio"]

[[test]]
name = "format_binary_tests"
required-features = ["format-binary"]

[[test]]
name = "format_bio_tests"
required-features = ["format-bio"]

[[test]]
name = "format_cas_tests"
required-features = ["format-cas"]

[[test]]
name = "format_columnar_tests"
required-features = ["format-columnar"]

[[test]]
name = "format_columnar_filter_props"
required-features = ["format-columnar"]

[[test]]
name = "format_columnar_projection_props"
required-features = ["format-columnar"]

[[test]]
name = "format_config_tests"
required-features = ["format-config"]

[[test]]
name = "format_csv_tests"
required-features = ["format-csv"]

[[test]]
name = "format_database_tests"
required-features = ["format-database"]

[[test]]
name = "format_detect_tests"
required-features = ["format-detect"]

[[test]]
name = "format_document_tests"
required-features = ["format-document"]

[[test]]
name = "format_erasure_tests"
required-features = ["format-erasure"]

[[test]]
name = "format_erasure_props"
required-features = ["format-erasure"]

[[test]]
name = "format_geo_tests"
required-features = ["format-geo"]

[[test]]
name = "format_image_tests"
required-features = ["format-image"]

[[test]]
name = "format_log_tests"
required-features = ["format-log"]

[[test]]
name = "format_ml_tests"
required-features = ["format-ml"]

[[test]]
name = "format_network_tests"
required-features = ["format-network"]

[[test]]
name = "format_scientific_tests"
required-features = ["format-scientific"]

[[test]]
name = "format_serialization_tests"
required-features = ["format-serialization"]

[[test]]
name = "format_serialization_props"
required-features = ["format-serialization"]

[[test]]
name = "format_detection_integration"
required-features = ["format-detect"]

[[test]]
name = "cross_category_conversion"
required-features = ["format-csv", "format-serialization", "format-detect"]

[[test]]
name = "streaming_equivalence"
required-features = ["format-phase1", "format-phase2", "format-document", "format-geo"]

[[bench]]
name = "format_benchmarks"
harness = false
required-features = ["format-all"]
