[package]
name = "deriva-core"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
sled = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"
