[package]
name = "deriva-network"
version = "0.1.0"
edition = "2021"

[dependencies]
deriva-core = { path = "../deriva-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
rand = "0.8"
tracing = "0.1"
prometheus = "0.13"
lazy_static = "1"
blake3 = "1"
sha2 = "0.10"
tonic = { workspace = true }
prost = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
proptest = "1"

[build-dependencies]
tonic-build = { workspace = true }
