[package]
name = "deriva-server"
version = "0.1.0"
edition = "2021"

[dependencies]
deriva-core = { path = "../deriva-core" }
deriva-compute = { path = "../deriva-compute" }
deriva-storage = { path = "../deriva-storage" }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
bytes = { workspace = true }
clap = { version = "4", features = ["derive"] }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
tempfile = "3"
futures = "0.3"
